--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'scala'
+//    id 'application'
+    id 'org.springframework.boot' version '2.6.3'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
+
+apply plugin: 'scala'
+apply plugin: 'io.spring.dependency-management'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -9,18 +15,49 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    provided
+    compile.extendsFrom provided
+}
+
 dependencies {
     implementation 'org.scala-lang:scala-library:2.12.6'
-    implementation 'org.apache.spark:spark-sql_2.12:3.1.1'
-    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.15'
+    implementation ('org.apache.spark:spark-sql_2.12:3.1.1')
+//    implementation ('org.apache.spark:spark-sql_2.12:3.1.1') {
+//        exclude group: 'com.google.code.gson', module: 'gson'
+//    }
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.6.3'
+//    provided group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
 
     testImplementation 'org.scalatest:scalatest_2.12:3.1.1'
     testImplementation 'org.scalatestplus:junit-4-12_2.13:3.1.2.0'
-//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+}
+
+configurations {
+    all {
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    }
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+jar {
+    duplicatesStrategy = "exclude"
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'r.ian.Main'
+    }
 }
