--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,9 @@
 plugins {
     id 'scala'
-//    id 'application'
-    id 'org.springframework.boot' version '2.6.3'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 apply plugin: 'scala'
-apply plugin: 'io.spring.dependency-management'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -22,10 +19,9 @@ configurations {
 
 dependencies {
     implementation 'org.scala-lang:scala-library:2.12.6'
-    implementation ('org.apache.spark:spark-sql_2.12:3.1.1')
-//    implementation ('org.apache.spark:spark-sql_2.12:3.1.1') {
-//        exclude group: 'com.google.code.gson', module: 'gson'
-//    }
+    implementation ('org.apache.spark:spark-sql_2.12:3.1.1') {
+        exclude group: 'com.google.code.gson', module: 'gson'
+    }
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.6.3'
 //    provided group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
