--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'scala'
 }
 
 group 'org.example'
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.scala-lang:scala-library:2.12.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.6.3'
+    implementation 'org.apache.spark:spark-launcher_2.12:3.1.1'
+
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
