--- a/launcher/src/main/resources/application-standalone.yaml
+++ b/launcher/src/main/resources/application-standalone.yaml
@@ -7,7 +7,8 @@ sparkConf:
       logDirectory: file:///usr/local/hadoop-3.2.2/spark-3.1.1-bin-without-hadoop/history
   driver:
     memory: 2g
-    extraJavaOptions: -Dspring.profiles.active=standalone
+#    if you want to send some VM option for JVM launching jar use this param
+#    extraJavaOptions: -Dspring.profiles.active=standalone
   submit:
     deployMode: cluster
 
